# libIDL

./: .cvsignore  AUTHORS  BUGS  ChangeLog  HACKING  IDL.h  IDL.h.new.in  Makefile.am  Makefile.in  Makefile.msc  Makefile.msc.in  NEWS  README  README.win32  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  idl.c  idl.h  index.html  lexer.l  libIDL-2.0.pc.in  libIDL-config-2.in  libIDL-config.in  libIDL-zip.in  libIDL.def  libIDL.doap  libIDL.m4.in  libIDL.pc.in  libIDL.spec  libIDL.spec.in  libIDL.texi  libIDL2.info  libIDL2.texi  libIDLConf.sh.in  ns.c  params.json  parser.h  (+6 more)
include/: Makefile.in
include/libIDL/: IDL.h.in  Makefile.in
trunk/: .cvsignore  ChangeLog  autogen.sh  configure.in  lexer.l  util.c  util.h
trunk/include/libIDL/: .cvsignore  IDL.h.in
